--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,25 +6,17 @@
   <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 
   <!-- Title -->
-  {% if title %}
-    <title>{{ title }} | {{ config.APP_NAME }}</title>
-  {% else %}
-    <title>{{ config.APP_NAME }}</title>
-  {% endif %}
+  <title>{{ config.APP_NAME }}</title>
 
   <!-- Styles -->
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}">
   {% block styles %}
   {% endblock %}
 
   <!-- JQuery -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 
-  <!-- Bootstrap -->
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
-
-  <!-- Bootstrap theme -->
-  <link rel="stylesheet" href="https://bootswatch.com/3/united/bootstrap.min.css">
+  <!-- Bootstrap with theme -->
+  <link rel="stylesheet" href="https://bootswatch.com/3/cerulean/bootstrap.min.css">
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
