--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,29 @@
       <p>VKPG is an app that downloads photo albums from VK.</p>
     </div>
     <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 align="center">Download photo album</h4>
+          </div>
+          <div class="panel-body">
+            <form action="" method="post" name="room">
+              <div class="form-group">
+                {{ form.hidden_tag() }}
+                <label>Album URL:</label>
+                {% for error in form.errors.album_url %}
+                  <div class="alert alert-dismissable alert-danger fade in">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                    {{ error }}
+                  </div>
+                {% endfor %}
+                {{ form.album_url(class_="form-control") }}
+              </div>
+              <input class="btn btn-default" type="submit" value="Download">
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 {% endblock %}
