--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
   <div class="container">
     <div class="jumbotron">
-      <h1>Welcome to VKPG!</h1>
-      <p>VKPG is an app that downloads photo albums from VK.</p>
+      <h1>Welcome to {{ config.APP_NAME.capitalize() }}!</h1>
+      <p>{{ config.APP_NAME.capitalize() }} is an app that downloads photo albums from VK.</p>
     </div>
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
