--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="{{ url_for('index') }}">
-        {{ config.APP_NAME }}
+        {{ config.APP_NAME.capitalize() }}
       </a>
     </div>
     <ul class="nav navbar-nav navbar-right">
