Shutdown facility, better logging, repr for `VkPhotoAlbum`

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -24,6 +24,12 @@
           </a>
         </li>
       {% endif %}
+      <li>
+        <a href="{{ url_for('shutdown') }}" name="shutdown">
+          <span class="glyphicon glyphicon-off"></span>
+          Shutdown
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
