Add check for vk app parameters and footer with link to repo

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,6 +46,9 @@
     <!-- Content -->
     {% block content %}
     {% endblock %}
+
+    <!-- Footer -->
+    {% include "footer.html" %}
   </div>
 </body>
 
