--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -17,7 +17,11 @@
           </a>
         </li>
       {% else %}
-        <li>
+        {% if config.VK_APP_PARAMS_SET %}
+         <li>
+        {% else %}
+         <li class="disabled">
+        {% endif %}
           <a href="{{ url_for('login_oauth_vk') }}" name="login">
             <span class="glyphicon glyphicon-log-in"></span>
             Login
