- Add hook for vk requests session to limit rate of api calls - Reduced number of workers to 8 - Move footer styles to base.css - Minor cleanup

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,10 +8,6 @@
   <!-- Title -->
   <title>{{ config.APP_NAME.capitalize() }}</title>
 
-  <!-- Styles -->
-  {% block styles %}
-  {% endblock %}
-
   <!-- JQuery -->
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.11.1.min.js') }}"></script>
 
@@ -20,6 +16,11 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+  {% block styles %}
+  {% endblock %}
 
   <!-- Scripts -->
   {% block scripts %}
