--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,8 +1,7 @@
-<div>
+<div class="footer">
   <center>
     <a href="{{ config.REPO_URL }}" target="_blank">
-        <img src="{{ url_for('static', filename='img/github.png') }}"
-             style="width: 2em; height: auto;">
+        <img src="{{ url_for('static', filename='img/github.png') }}"/>
     </a>
   </center>
 </div>
