--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
             <h4 align="center">Download photo album</h4>
           </div>
           <div class="panel-body">
-            <form action="" method="post" name="room">
+            <form action="" method="post">
               <div class="form-group">
                 {{ form.hidden_tag() }}
                 <label>Album URL:</label>
